Reduce word count

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -15,44 +15,6 @@
     doi = {10.7717/peerj-cs.103}
 }
 
-@Article{         numpy,
-    title         = {Array programming with {NumPy}},
-    author        = {Charles R. Harris and K. Jarrod Millman and St{\'{e}}fan J.
-                 van der Walt and Ralf Gommers and Pauli Virtanen and David
-                 Cournapeau and Eric Wieser and Julian Taylor and Sebastian
-                 Berg and Nathaniel J. Smith and Robert Kern and Matti Picus
-                 and Stephan Hoyer and Marten H. van Kerkwijk and Matthew
-                 Brett and Allan Haldane and Jaime Fern{\'{a}}ndez del
-                 R{\'{i}}o and Mark Wiebe and Pearu Peterson and Pierre
-                 G{\'{e}}rard-Marchant and Kevin Sheppard and Tyler Reddy and
-                 Warren Weckesser and Hameer Abbasi and Christoph Gohlke and
-                 Travis E. Oliphant},
-    year          = {2020},
-    month         = sep,
-    journal       = {Nature},
-    volume        = {585},
-    number        = {7825},
-    pages         = {357--362},
-    doi           = {10.1038/s41586-020-2649-2},
-    publisher     = {Springer Science and Business Media {LLC}},
-    url           = {https://doi.org/10.1038/s41586-020-2649-2}
-}
-
-@Article{matplotlib,
-    Author    = {Hunter, J. D.},
-    Title     = {Matplotlib: A 2D graphics environment},
-    Journal   = {Computing in Science \& Engineering},
-    Volume    = {9},
-    Number    = {3},
-    Pages     = {90--95},
-    abstract  = {Matplotlib is a 2D graphics package used for Python for
-  application development, interactive scripting, and publication-quality
-  image generation across user interfaces and operating systems.},
-    publisher = {IEEE COMPUTER SOC},
-    doi       = {10.1109/MCSE.2007.55},
-    year      = 2007
-}
-
 @article{walberla,
     title = {waLBerla: A block-structured high-performance framework for multiphysics simulations},
     author = {Bauer, Martin and Köstler, Harald and Rüde, Ulrich},
@@ -75,13 +37,6 @@
     url = {https://doi.org/10.1145/3295500.3356186}
 }
 
-@Manual{pwlf,
-    author = {Jekel, Charles F. and Venter, Gerhard},
-    title = {{pwlf:} A Python Library for Fitting 1D Continuous Piecewise Linear Functions},
-    year = {2019},
-    url = {https://github.com/cjekel/piecewise_linear_fit_py}
-}
-
 @article{coolprop,
     author = {Bell, Ian H. and Wronski, Jorrit and Quoilin, Sylvain and Lemort, Vincent},
     title = {Pure and Pseudo-pure Fluid Thermophysical Property Evaluation and
@@ -96,7 +51,7 @@
     eprint = {http://pubs.acs.org/doi/pdf/10.1021/ie4033999}
 }
 
-@article{nist_webbook,
+@article{linstrom2001nist,
     author = {Linstrom, Peter J. and Mallard, William G.},
     title = {The NIST Chemistry WebBook:  A Chemical Data Resource on the Internet},
     journal = {Journal of Chemical \& Engineering Data},
@@ -106,18 +61,6 @@
     year = {2001},
     doi = {10.1021/je000236i},
     URL = {https://doi.org/10.1021/je000236i},
-    eprint = {https://doi.org/10.1021/je000236i},
-    abstract = { The NIST Chemistry WebBook (http://webbook.nist.gov) is an Internet site that provides access to chemical and physical property data both from NIST and other sources. The site was established in 1996 and has grown to encompass a wide variety of thermochemical, ion energetics, solubility, and spectroscopic data. The thermochemical data available include enthalpies of formation, enthalpies of phase transitions, and heat capacities. Thermochemical properties of many reactions that support enthalpy of formation values are provided. Automated tools are used to check data prior to its inclusion in the web site. Most of the collections in the site provide extensive coverage of the literature in their field and include relevant metadata such as the experiment type or important auxiliary data. These features make the site an excellent tool for data evaluation. A major goal of the project was to provide convenient access to all types of chemical data. Several challenges were encountered in the development of systems and conventions for concisely and accurately displaying chemical data on the Internet. The next phase of the evolution of the site will be the addition of tools to aid researchers in getting data from the site. Data from the site have found applications in industrial, research, and educational settings. Usage patterns for the site will be discussed. }
-}
-
-@InProceedings{ pandas,
-    author    = { {W}es {M}c{K}inney },
-    title     = { {D}ata {S}tructures for {S}tatistical {C}omputing in {P}ython },
-    booktitle = { {P}roceedings of the 9th {P}ython in {S}cience {C}onference },
-    pages     = { 56 - 61 },
-    year      = { 2010 },
-    editor    = { {S}t\'efan van der {W}alt and {J}arrod {M}illman },
-    doi       = { 10.25080/Majora-92bf1922-00a }
 }
 
 @book{lewis1996finite,
@@ -197,7 +140,7 @@
     year = 2012,
     publisher = {Dover Publications},
     isbn = {978-0486411811},
-    doi = {10.1016/0045-7825(87)90013-2},
+    doi = {10.1016/0045-7825(87)90013-2}
 }
 
 @book{tadmor2011modeling,
